<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="Share"
        android:icon="@drawable/ic_share"
        android:id="@+id/share"
        app:showAsAction="always"
        />
    <item
        android:title="Delete"
        android:icon="@drawable/ic_delete"
        android:id="@+id/delete"
        app:showAsAction="always"
        />
</menu>